feat: Enhance authentication with JWT support, refresh token functionality, and update user model

--- a/CourseDashBoardBackEnd/CourseSystemBackEnd/appsettings.json
+++ b/CourseDashBoardBackEnd/CourseSystemBackEnd/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+  "Key": "this is my custom Secret key for authentication", 
+  "Issuer": "CourseSystem",
+  "Audience": "CourseSystemUser",
+  "DurationInMinutes": 60
+}
+
 }
